kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hub
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: hub
    spec:
      serviceAccountName: hub
      nodeSelector:
        group: ocio
        jupyter_role: hub
      containers:
        - name: hub
          imagePullPolicy: "Always"
          image: "slaclab/jupyterhub"
          resources:
            limits:
              memory: 2G
              cpu: 2.0
            requests:
              memory: 1G
              cpu: 0.8
          ports:
            -
              containerPort: 8000
              name: hub
          volumeMounts:
            - name: hub-data
              mountPath: /home/jupyter
            - name: hub-config
              mountPath: /opt/jupyterhub/config
      volumes:
        - name: hub-data
          persistentVolumeClaim:
           claimName: hub-data
        - name: hub-config
          configMap:
            name: hub-config
            #  Create with `kubectl create configmap jld-hub-config \
            #   --from-file=config/jupyterhub_config.py \
            #   --from-file=config/jupyterhub_config.d`
            #  It is sort of annoying that you still have to specify
            #   each file in the directory.
            items:
            - key: jupyterhub_config.py
              path: jupyterhub_config.py
            - key: 00-preamble.py
              path: jupyterhub_config.d/00-preamble.py
            - key: 10-authenticator.py
              path: jupyterhub_config.d/10-authenticator.py
            - key: 20-spawner.py
              path: jupyterhub_config.d/20-spawner.py
            - key: 30-environment.py
              path: jupyterhub_config.d/30-environment.py
