kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hub
  labels:
    name: hub
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8000
    protocol: TCP
  - name: api
    port: 8081
    protocol: TCP
  selector:
    name: hub
