kubernetes/jupyterhub.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: hub
  labels:
    name: hub
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8000
    protocol: TCP
  - name: api
    port: 8081
    protocol: TCP
  selector:
    name: hub

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hub
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "20s"
    nginx.ingress.kubernetes.io/client-max-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  tls:
    - hosts:
      - ${hub_url}
      secretName: tls-certificate
  rules:
    - host: ${hub_url} 
    #- host:
      http:
        paths:
        - path: /
          backend:
            serviceName: hub
            servicePort: 8000

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: hub
spec:
  replicas: 1
  selector:
    matchLabels:
      name: hub
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: hub
    spec:
      serviceAccountName: ${namespace}-${environment}
      nodeSelector:
        group: ocio
        jupyter_role: hub
      containers:
        - name: hub
          imagePullPolicy: "Always"
          image: ${hub_image}
          resources:
            limits:
              memory: 2G
              cpu: 2.0
            requests:
              memory: 1G
              cpu: 0.8
          ports:
            -
              containerPort: 8000
              name: hub
          volumeMounts:
            - name: hub-data
              mountPath: /home/jupyter
            - name: hub-config
              mountPath: /opt/jupyterhub/config
      volumes:
        - name: hub-data
          persistentVolumeClaim:
           claimName: ${namespace}--hub-data
        - name: hub-config
          configMap:
            name: hub-config
            items:
            - key: jupyterhub_config.py
              path: jupyterhub_config.py
            - key: 00-preamble.py
              path: jupyterhub_config.d/00-preamble.py
            - key: 10-authenticator.py
              path: jupyterhub_config.d/10-authenticator.py
            - key: 20-spawner.py
              path: jupyterhub_config.d/20-spawner.py
            - key: 30-environment.py
              path: jupyterhub_config.d/30-environment.py
            - key: node-selectors.yaml
              path: node-selectors.yaml
            - key: 01-slac.yaml
              path: images.d/01-slac.yaml
            - key: 02-cryoem.yaml
              path: images.d/02-cryoem.yaml
            - key: 05-lsst.yaml
              path: images.d/05-lsst.yaml
